Changed homepage header image position to 'center center' to fix image alignment issue

--- a/_sass/core/homepage.scss
+++ b/_sass/core/homepage.scss
@@ -44,6 +44,7 @@
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    background-position: center center;
 }
 
 /* Sub Text in Home Page Header */
